# ros2-jazzy-workspace

./: .gitignore  CHAOS_EXPERIMENT.md  CONTROL_ROADMAP.md  DOCKER_SETUP.md  Dockerfile  GAZEBO_LEARNING_PATH.md  README.md  ROS2_BEST_PRACTICES.md  ROS2_CHEATSHEET.md  ROS2_POETRY_WORKFLOW.md  WIP_EXPERIMENT_STATUS.md  run_ros.sh  setup_workspace.sh
.devcontainer/: devcontainer.json
src/chaos_experiment_pkg/: CHAOS_EXPERIMENT.md  package.xml  pyproject.toml  setup.cfg  setup.py
src/chaos_experiment_pkg/chaos_experiment_pkg/: data_logger.py
src/chaos_experiment_pkg/launch/: chaos_experiment.launch.py
src/chaos_experiment_pkg/runs/chaos_recording_2026-03-22-17-33-39/: chaos_recording_2026-03-22-17-33-39_0.mcap  metadata.yaml
src/chaos_experiment_pkg/runs/chaos_recording_2026-03-22-17-35-40/: chaos_recording_2026-03-22-17-35-40_0.mcap  metadata.yaml
src/chaos_experiment_pkg/scripts/: compare_runs.py
src/my_robot_controller/: README.md  package.xml  setup.py
src/my_robot_controller/my_robot_controller/: draw_circle.py  my_first_node.py  (+2 more)
src/my_robot_description/: CMakeLists.txt  README.md  package.xml
src/pid_controller_pkg/: ADVANCED_CONTROL_LAB.md  CONTROL_ROADMAP.md  README.md  package.xml  pyproject.toml  setup.py
src/pid_controller_pkg/launch/: pid_controller.launch.py
src/pid_controller_pkg/models/sliding_double_pendulum/: model.config  model.sdf
src/pid_controller_pkg/pid_controller_pkg/: pid_controller.py
src/pid_controller_pkg/urdf/: double_pendulem.urdf  single_pendulum.urdf
src/pid_controller_pkg/worlds/: pid_balancer.sdf
(+9 files in other folders)
