[project]
name = "chaos-experiment-pkg"
version = "0.1.0"
description = ""
authors = [
    {name = "BowenMichael",email = "michael@thebowenfamily.com"}
]
requires-python = ">=3.12"
dependencies = [
    "pandas (>=3.0.1,<4.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "rosbags (>=0.11.0,<0.12.0)",
    "numpy (>=2.4.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
