[tool.poetry]
name = "pid_controller_pkg"
version = "0.1.0"
description = "PID controller for ROS 2"
authors = ["BowenMichael <michael@thebowenfamily.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
rclpy = "*" 
# Add your other dependencies here



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"